# vize_ex

./: .gitignore  .scout-context.md  README.md  checksum-Elixir.Vize.Native.exs  mix.exs
.github/workflows/: release.yml
lib/: vize.ex
lib/vize/: native.ex
native/vize_ex_nif/: Cargo.toml
native/vize_ex_nif/src/: lib.rs
test/: vize_test.exs
