[package]
name = "vize_ex_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "vize_ex_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37", default-features = false, features = ["derive", "nif_version_2_15"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

vize_carton = "0.28"
vize_relief = "0.28"
vize_armature = "0.28"
vize_atelier_core = "0.28"
vize_atelier_dom = "0.28"
vize_atelier_vapor = "0.28"
vize_atelier_ssr = "0.28"
# TODO: switch back to crates.io once ubugeeei/vize#123 is merged and released
# TODO: switch back to crates.io once ubugeeei/vize#123 and #124 are merged and released
vize_atelier_sfc = { git = "https://github.com/dannote/vize.git", branch = "combined", features = ["native"] }
vize_patina = "0.28"
vize_croquis = "0.28"
